Finished work on CVE and INCs, TA page template and backend fixes
